nexus_debug.log
[2026-06-30 12:40:36] Unhandled Exception in /ai_assistant: Unexpected end of template. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
Traceback (most recent call last):
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "G:\Personal\Nexus-River-View\routes.py", line 4386, in ai_assistant
    return render_template('ai_assistant.html')
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "G:\Personal\Nexus-River-View\templates\ai_assistant.html", line 293, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Unexpected end of template. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.

[2026-06-30 12:46:07] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:46:07] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:46:07] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-06-30 12:46:12] Document sent successfully.
[2026-06-30 12:46:12] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:46:12] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:46:12] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-06-30 12:46:18] Document sent successfully.
[2026-06-30 12:48:04] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:48:04] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-06-30 12:48:04] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-06-30 12:48:11] Document sent successfully.
[2026-06-30 12:57:55] AI Chat Error: 429 RESOURCE_EXHAUSTED. {'error': {'code': 429, 'message': 'You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. To monitor your current usage, head to: https://ai.dev/rate-limit. \n* Quota exceeded for metric: generativelanguage.googleapis.com/generate_content_free_tier_requests, limit: 20, model: gemini-2.5-flash\nPlease retry in 8.717093022s.', 'status': 'RESOURCE_EXHAUSTED', 'details': [{'@type': 'type.googleapis.com/google.rpc.Help', 'links': [{'description': 'Learn more about Gemini API quotas', 'url': 'https://ai.google.dev/gemini-api/docs/rate-limits'}]}, {'@type': 'type.googleapis.com/google.rpc.QuotaFailure', 'violations': [{'quotaMetric': 'generativelanguage.googleapis.com/generate_content_free_tier_requests', 'quotaId': 'GenerateRequestsPerDayPerProjectPerModel-FreeTier', 'quotaDimensions': {'location': 'global', 'model': 'gemini-2.5-flash'}, 'quotaValue': '20'}]}, {'@type': 'type.googleapis.com/google.rpc.RetryInfo', 'retryDelay': '8s'}]}}
[2026-07-02 12:51:31] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:51:31] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:51:31] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:51:33] Document sent successfully.
[2026-07-02 12:51:35] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:51:35] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:51:35] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:51:37] Document sent successfully.
[2026-07-02 12:51:43] Unhandled Exception in /favicon.ico: 404 Not Found: The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.
Traceback (most recent call last):
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "G:\Personal\Nexus-River-View\routes.py", line 4394, in favicon
    return send_from_directory(os.path.join(current_app.root_path, 'static'),
                               'favicon.ico', mimetype='image/vnd.microsoft.icon')
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\flask\helpers.py", line 552, in send_from_directory
    return werkzeug.utils.send_from_directory(  # type: ignore[return-value]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        directory, path, **_prepare_send_file_kwargs(**kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\USER\AppData\Roaming\Python\Python313\site-packages\werkzeug\utils.py", line 575, in send_from_directory
    raise NotFound()
werkzeug.exceptions.NotFound: 404 Not Found: The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.

[2026-07-02 12:51:54] Starting Background Tasks due to: User Login: admin
[2026-07-02 12:51:54] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:51:58] Synced Excel to: G:\Personal\Nexus-River-View\nexus_river_view_master.xlsx
[2026-07-02 12:51:58] Synced Excel to: G:\Personal\Nexus-River-View\nexus_river_view_master.xlsx
[2026-07-02 12:51:58] DB Backup created: G:\Personal\Nexus-River-View\backups\nexus_db_backup_20260702_125158.db
[2026-07-02 12:51:58] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:52:02] Document sent successfully.
[2026-07-02 12:56:52] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:56:52] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:56:52] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:56:55] Document sent successfully.
[2026-07-02 12:57:34] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:57:34] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:57:34] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:57:38] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:57:38] Failed to authorize Google Sheets: Unterminated string starting at: line 1 column 140 (char 139)
[2026-07-02 12:57:38] Attempting to send document: G:\Personal\Nexus-River-View\nexus.db
[2026-07-02 12:57:42] Document sent successfully.
[2026-07-02 12:57:43] Document sent successfully.
